examples/errors/misspell.lgt

:- object(misspell).

	% misspelt call to Prolog built-in predicate
	output(A) :-
		writr(A).

:- end_object.

